-更新了sys/fnc文件夹基本上整理了文件的行，屏幕的地板上有缩进。
-更新的文件/索引。php的
-与HTML验证工作减少了错误的数量从42到21（在wap主题）。 
-更新的脚和头文件。wap主题中的php。 
=========================
DCMS-Social 1.7.9 beta
=========================
-表情符号模块已完全重写
-现在表情符号通过ID而不是文件名输出和记录，从而解决了破碎表情符号的问题）
-固定文件编码sys/fnc/aut。php显然，照片没有工作，因为她
=========================
DCMS-Social 1.8.0 beta
=========================
-在个人档案中关闭2个XSS
-在信息部分关闭3个XSS
-在下载中心关闭XSS
-修正了删除相册评论的链接
-修正相册错误（图像丢失）
-修正了文件sys/inc/chmod_test。php（错误地显示了管理面板中的权限）
-修正了文件ipua中的错误。php的
-修正论坛文件中的解释器错误
-删除新主题sys/inc/forum_nw的输出文件。php的
-从/forum/inc/search_act中删除了过时的split()函数。php，并替换为preg_split()
-讨论模块被重写
现在模块讨论从user/discussion/inc文件夹加载/ 
以前，裁剪文本时出现错误，由于bb代码，标记被破坏。 
现在使用css类文本，css样式/系统裁剪文本。css文件。 
=========================
DCMS-Social 1.9.8 beta
=========================
-日记中的封闭被动XSS;
-重新定位日记的可能性已经写好了;
-日记的排序已被改写（增加了各种按时间流行的）;
-完全改写了日记的设计（现在一切都丰富多彩）;
-修正了搜索日记的错误;
-修正了私人日记输出的错误;
-增加了查看那些谁已经添加了日记书签的能力;
-现在你可以不用写名字就可以写日记了;
-在论坛中找到的所有XSS都关闭;
-确保主题的编辑;
-完全修改了论坛的设计;
-现在你可以添加一个描述的部分;
-部分中的主题的输出已被重写（如果主题被固定，那么它旁边会有一个按钮图标。 如果它是关闭的，那么锁。 如果既固定和关闭，那么两个图标将显示在主题名称的不同侧面+一对夫妇更新奇）;
-重写了论坛主题和评论;
-现在您可以将调查添加到主题（来自VoronoZ）;
-增加了用户的"主题和评论"mod;
-修正了清除邮件中的垃圾的错误;
-增加了从邮件在昵称的方向写消息的能力;
-主页上的最后日记的输出被写入;
-书签模块已被重写;
-朋友被改写了。 新设计。
-相册以新的方式重新发行;
-修正了相册隐私和照片显示的错误;
-根据新版本重写了将照片添加到书签。
-修复了对文件中注释的响应的错误。
-修正了下载中心及其搜索中的错误;
-主页新闻输出的新设计。
-当您更改主（头像）上的照片时，动态上会出现相应的条目。
-重写评论动态上的录音。
-现在，如果在动态上写了一条消息，通知就会来。
-现在你可以评论动态上的条目。 在记录中编写逗号时，记录的作者将收到通知。
-写日记时，墙上会出现相应的"通知"。 创建主题时也是如此。
-Beta测试期间发现的所有错误都已修复。
-修正网页主题，特别是主要网页和个人网页;
-修正活动积分累积的错误;
-修正了新闻作者输出的错误。
=========================
DCMS-Social 1.9.9
=========================
-Bb代码中的漏洞被关闭
-在论坛上的主题投票后，您现在可以写消息
-主题的第一条消息现在显示在所有论坛页面上
-修正网页版表情符号的显示
-论坛部分现在可以更改
-现在在论坛上引用时通知来了
-修正了邮件页面
-修正了朋友页面
-固定图标显示
-修正了其他错误
-其他使用申请已关闭
=========================
DCMS-Social 1.9.9.5
====================
-在严格模式数据库（Mysql=>5.7）上固定安装（日记和用户）
DCMS-Social 1.9.9.7
====================
-PHP7和PHP8支持。 保留了与引擎的第三方模块的兼容性。
-修正了小错误
====================
-修正status()为avatar()
-修正avatar_ank()为avatar()
-obmen改为down