@@ -1,8 +1,9 @@
 # git屏蔽代码
 HELP.md
 
-/sys/dat/settings_6.2.dat
-/sys/dat/shif_iv.dat
+/sys/conf/settings_6.2.dat
+/sys/conf/settings.php
+/sys/conf/shif_iv.dat
 /sys/tmp/*
 /files/down/*
 /files/screens/14/*
