@@ -1,7 +1,7 @@
 <?php
-if (file_exists(H.'sys/dat/settings_6.2.dat'))
+if (file_exists(H.'sys/conf/settings.php'))
 {
-echo '必须删除文件才能继续安装 <b>sys/dat/settings_6.2.dat</b>';
+echo '必须删除文件才能继续安装 <b>sys/conf/settings.php</b>';
 exit;
 }
 if (!($set=@parse_ini_file(H.'sys/dat/default.ini',false)))
