@@ -1,1 +1,0 @@
-a:56:{s:12:"dcms_version";s:6:"1.9.11";s:10:"dcms_state";s:6:"stable";s:13:"meta_keywords";s:11:"DCMS Social";s:16:"meta_description";s:15:"dcms social cms";s:10:"mysql_host";s:9:"localhost";s:10:"mysql_user";s:4:"root";s:10:"mysql_pass";s:6:"123456";s:13:"mysql_db_name";s:4:"dcms";s:4:"rekl";s:0:"";s:13:"set_show_icon";s:1:"1";s:8:"set_them";s:7:"default";s:9:"set_them2";s:3:"web";s:4:"shif";s:8:"8c488DgA";s:5:"p_str";s:1:"7";s:10:"chat_umnik";s:15:"聪明的家伙";s:12:"chat_shutnik";s:6:"小丑";s:9:"time_chat";s:2:"30";s:9:"umnik_new";s:2:"30";s:10:"umnik_help";s:2:"30";s:10:"umnik_time";s:2:"90";s:11:"shutnik_new";s:2:"15";s:16:"echo_rassh_forum";s:1:"0";s:10:"echo_rassh";s:1:"1";s:13:"show_num_post";s:1:"1";s:9:"show_away";s:1:"0";s:11:"mail_backup";s:0:"";s:11:"write_guest";s:1:"0";s:9:"copy_path";s:14:"style/copy.png";s:13:"down_limit_up";s:2:"50";s:16:"downloads_select";s:1:"0";s:12:"show_err_php";s:1:"1";s:2:"st";s:1:"1";s:18:"max_upload_photo_x";s:4:"2024";s:18:"max_upload_photo_y";s:4:"2024";s:12:"guest_select";s:1:"0";s:10:"reg_select";s:4:"open";s:19:"loads_new_file_hour";s:2:"24";s:7:"antidos";s:1:"1";s:7:"antimat";s:1:"1";s:4:"bb_i";s:1:"1";s:4:"bb_u";s:1:"1";s:4:"bb_b";s:1:"1";s:6:"bb_big";s:1:"1";s:8:"bb_small";s:1:"1";s:7:"bb_code";s:1:"1";s:6:"bb_red";s:1:"1";s:9:"bb_yellow";s:1:"1";s:8:"bb_green";s:1:"1";s:7:"bb_blue";s:1:"1";s:8:"bb_white";s:1:"1";s:7:"bb_size";s:1:"1";s:7:"bb_http";s:1:"1";s:6:"bb_url";s:1:"1";s:6:"bb_img";s:1:"1";s:4:"exit";s:1:"1";s:5:"title";s:24:"127.0.0.4 - 社区系统";}
