@@ -378,16 +378,25 @@ if (dbrows($q) != 0) {
 // 保存系统设置
 function save_settings($set)
 {
-	unset($set['web']);
-	if ($fopen = @fopen(H . 'sys/dat/settings_6.2.dat', 'w')) {
-		@fputs($fopen, serialize($set));
-		@fclose($fopen);
-		@chmod(H . 'sys/dat/settings_6.2.dat', 0755);
-		return TRUE;
-	} else
-		return FALSE;
-}
+    // 从数组中移除特定键
+    unset($set['web']);
+    
+    // 构建配置文件内容
+    $configContent = "<?php\nreturn " . var_export($set, true) . ";\n";
 
+    // 定义配置文件路径
+    $filePath = H . 'sys/conf/settings.php';
+
+    // 尝试打开文件写入内容
+    if ($fopen = @fopen($filePath, 'w')) {
+        @fputs($fopen, $configContent);
+        @fclose($fopen);
+        @chmod($filePath, 0777);
+        return true;
+    } else {
+        return false;
+    }
+}
 // 管理行动记录
 function admin_log($mod, $act, $opis)
 {
